package com.marcos.music.entity;

public enum Role {
    USER,
    ADMIN //trocar para algo mais seguro
}