@startuml
!define ABSTRACT abstract
!define PRIMARY_KEY <color:FF6B6B>PK</color>
!define FOREIGN_KEY <color:4ECDC4>FK</color>

enum Role {
    USER
    ADMIN
}

class Usuario {
    - id: UUID (PK)
    - email: String (unique, not null)
    - password: String (not null)
    - role: Role
    ---
    + getId(): UUID
    + getEmail(): String
    + getPassword(): String
    + getRole(): Role
}

class TermsHistory {
    - id: UUID (PK)
    - timestamp: LocalDateTime (not null)
    - termosAceito: Boolean (not null)
    - usuarioId: UUID (FK)
}

class Aluno {
    - id: UUID (PK, FK)
    - nome: String (not null)
    - telefone: String
    - status: Boolean
    - reposicoes: Integer
    - termos: Boolean
    ---
    + getNome(): String
    + getTelefone(): String
    + getStatus(): Boolean
    + getReposicoes(): Integer
    + getTermos(): Boolean
}

class Aula {
    - id: Long (PK)
    - dataInicio: LocalDateTime (not null)
    - dataFim: LocalDateTime (not null)
    - flagCancelada: Boolean
    - presencaConfirmada: Boolean
    - idAluno: UUID (FK)
    ---
    + getId(): Long
    + getDataInicio(): LocalDateTime
    + getDataFim(): LocalDateTime
    + isCancelada(): Boolean
    + isPresencaConfirmada(): Boolean
}

class AulaAluno {
    - id: Long (PK)
    - dia: Integer (not null)
    - horarioInicio: LocalTime (not null)
    - horarioFim: LocalTime (not null)
    - idAluno: UUID (FK)
    - dataRegistro: LocalDateTime
    - acao: String
    - idAula: Long (FK)
    ---
    + getId(): Long
    + getDia(): Integer
    + getHorarioInicio(): LocalTime
    + getHorarioFim(): LocalTime
}

' Relacionamentos
Usuario "1" -- "0..1" Aluno : perfil
Usuario "1" -- "0..*" TermsHistory : termos
Aluno "1" -- "n" Aula : agendadas
Aluno "1" -- "n" AulaAluno : horários recorrentes
Aula "0..1" -- "0..*" AulaAluno : log
Role -- Usuario : define papel
@enduml